[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
automod = "1"
color-eyre = "0.6"
derive_more = "0.99"
gcollections = "1"
intervallum = "1"
itertools = "0.10"
linkme = "0.3"
ndarray = { version = "0.15", features = ["rayon"] }
nom = "7"
num = "0.4"
once_cell = "1"
pathfinding = "4"
regex = "1"
